# cpp_lecture

./: .gitignore
class_design/: object_counter.cc  thread_pool.cc  thread_seq_run.cc
cpp_api_design/pimpl/: README.md  foo.cc  foo.h  impl.cc  impl.h  main.cc
design_pattern/: adapter.hpp  factory.hpp  main.cc  observer.hpp  proxy.hpp  singleton.hpp
design_pattern/plugin/: CMakeLists.txt  defines.h  main.cpp  plugin.cpp  plugin_manager.cpp  plugin_manager.h  pluginapi.cpp  pluginapi.h  renderer.h  renderer_factory.cpp  renderer_factory.h
design_pattern/remote_proxy/: CMakeLists.txt  proxy.cc  proxy.h  proxy_main.cc  service.cc  service.h  service_main.cc
design_pattern/remote_proxy/core/: connection.cc  connection.h  connection_factory.h  proxy.cc  proxy.h  rpc_message.cc  rpc_message.h  runtime.cc  runtime.h  service.cc  service.h  utils.cc  utils.h
design_pattern/remote_proxy/core/impl/: socket_conn_factory_impl.cc  socket_conn_factory_impl.h  socket_connection_impl.cc  socket_connection_impl.h
other/protobuf/: CMakeLists.txt  main.cc  person.proto
